--- a/package.json
+++ b/package.json
@@ -3,56 +3,52 @@
   "version": "0.1.0",
   "homepage": "https://kwang.cc",
   "private": true,
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "deploy": "gh-pages -d build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
   "dependencies": {
     "@dicebear/collection": "^9.2.2",
     "@dicebear/core": "^9.2.2",
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@mui/icons-material": "^6.1.1",
-    "@mui/material": "^6.1.1",
-    "@reduxjs/toolkit": "^2.2.7",
+    "@mui/icons-material": "^7.3.5",
+    "@mui/material": "^7.3.5",
+    "@tailwindcss/vite": "^4.1.17",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.108",
-    "@types/react": "^18.3.8",
+    "@types/node": "^24.10.0",
+    "@types/react": "^19.2.2",
     "@types/react-dom": "^18.3.0",
     "axios": "^1.7.7",
     "gh-pages": "^6.1.1",
     "gsap": "^3.12.5",
-    "material-design-icons": "^3.0.1",
     "moment": "^2.30.1",
     "nprogress": "^0.2.0",
-    "react": "^18.3.1",
+    "react": "^19.2.0",
     "react-calendar": "^5.0.0",
-    "react-dom": "^18.3.1",
+    "react-dom": "^19.2.0",
     "react-ga": "^3.3.1",
-    "react-markdown": "^9.0.1",
-    "react-redux": "^9.1.2",
-    "react-router-dom": "^6.26.2",
-    "react-scripts": "5.0.1",
-    "react-svg": "^16.1.34",
-    "redux-persist": "^6.0.0",
-    "rehype-raw": "^7.0.0",
-    "remark-gfm": "^4.0.0",
+    "react-markdown": "^10.1.0",
+    "react-router-dom": "^7.9.5",
+    "react-svg": "^16.3.0",
     "sass": "^1.79.3",
     "sass-loader": "^16.0.2",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "predeploy": "yarn build",
-    "deploy": "gh-pages -d build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "tailwindcss": "^4.1.17",
+    "typescript": "^5.9.3",
+    "web-vitals": "^2.1.4",
+    "zustand": "^5.0.8"
   },
   "eslintConfig": {
     "extends": [
@@ -73,9 +69,7 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.20",
-    "eslint-import-resolver-typescript": "^3.6.3",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.12"
+    "@vitejs/plugin-react": "^5.1.0",
+    "vite": "^7.2.1"
   }
 }
