--- a/package.json
+++ b/package.json
@@ -8,12 +8,9 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "deploy": "gh-pages -d build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "vite test"
   },
   "dependencies": {
-    "@dicebear/collection": "^9.2.2",
-    "@dicebear/core": "^9.2.2",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
@@ -24,30 +21,21 @@
     "@mui/icons-material": "^7.3.5",
     "@mui/material": "^7.3.5",
     "@tailwindcss/vite": "^4.1.17",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
     "@types/node": "^24.10.0",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^18.3.0",
     "axios": "^1.7.7",
+    "dayjs": "^1.11.19",
+    "framer-motion": "^12.23.24",
     "gh-pages": "^6.1.1",
-    "gsap": "^3.12.5",
-    "moment": "^2.30.1",
-    "nprogress": "^0.2.0",
     "react": "^19.2.0",
     "react-calendar": "^5.0.0",
     "react-dom": "^19.2.0",
-    "react-ga": "^3.3.1",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.9.5",
     "react-svg": "^16.3.0",
-    "sass": "^1.79.3",
-    "sass-loader": "^16.0.2",
     "tailwindcss": "^4.1.17",
     "typescript": "^5.9.3",
-    "web-vitals": "^2.1.4",
     "zustand": "^5.0.8"
   },
   "eslintConfig": {
