--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dayjs": "^1.11.19",
     "framer-motion": "^12.23.24",
     "gh-pages": "^6.1.1",
+    "js-yaml": "^4.1.1",
     "react": "^19.2.0",
     "react-calendar": "^5.0.0",
     "react-dom": "^19.2.0",
@@ -57,6 +58,7 @@
     ]
   },
   "devDependencies": {
+    "@types/js-yaml": "^4",
     "@vitejs/plugin-react": "^5.1.0",
     "vite": "^7.2.1"
   }
